fixed on mobile , added active cell

--- a/src/styles/components/_firstFloor.scss
+++ b/src/styles/components/_firstFloor.scss
@@ -16,6 +16,11 @@
   max-height: 80%;
   //margin-top: 2em;
 
+  @media (max-width: 1023px) {
+    /*overflow: auto;*/
+    overflow: hidden;
+  }
+
   .grid-cell {
     border: 0.2px solid #e3e3e3;
     cursor: pointer;
@@ -47,6 +52,10 @@
       vertical-align: middle;
       overflow: hidden;
     }
+  }
+  .grid-cell--selected {
+    @extend .grid-cell--active;
+    border: 1px solid red;
   }
 }
 
