--- a/src/styles/components/_mainGrid.scss
+++ b/src/styles/components/_mainGrid.scss
@@ -3,6 +3,10 @@
   width: 50%;
   flex: 1;
 
+  @media (max-width: 767px) {
+    overflow-y: hidden;
+  }
+
   .main-grid-buttons {
     position: fixed;
     top: 1em;
@@ -21,19 +25,28 @@
 
   .main-grid-grid {
     text-align: center;
-    /*padding: 5% 5%;*/
-    /*height: calc(width/1.6);*/
     height: 100%;
     display: flex;
     align-items: center;
 
-    /*margin: 0 auto;*/
+    @media (max-width: 767px) {
+      display: table;
+      height: 100%;
+    }
 
     .main-grid-wrapper {
       vertical-align: middle;
       padding-top: 60%;
       width: 100%;
       position: relative;
+
+      @media (max-width: 767px) {
+        margin-top: 5em;
+        width: 200vw;
+      }
+      @media (min-width: 1900px) {
+        margin-top: 5em;
+      }
     }
   }
 
